MenuPage z-index Fixed.

--- a/src/components/Header/components/MenuPage/menuPage.css
+++ b/src/components/Header/components/MenuPage/menuPage.css
@@ -9,6 +9,7 @@
   background-color: lightblue;
   transform: translateX(-100%);
   transition: all 500ms ease;
+  z-index: 100;
 }
 
 .openMenu {
